# TELNYX-AI-SERVICE-Rust

./: .env.example  .gitignore  ARCHITECTURE-DIAGRAMS.md  BENCHMARKS.md  CHEATSHEET.md  Cargo-optimization.toml  Cargo.toml  DEPLOYMENT-GUIDE.md  DOCUMENTATION-INDEX.md  Dockerfile  EXECUTION-CHECKLIST.md  FINAL-REPORT.md  FRAMEWORKS-COMPARISON.md  GITHUB-WORKFLOWS.md  INDEX.md  INSTALL-BUILD-TOOLS.md  MIGRACION.md  MIGRATION-SUMMARY.md  Makefile  PROYECTO-COMPLETADO.txt  QUICK-START-TESTING.md  QUICKSTART.md  README-WEBSOCKET.md  README.md  RENDER-DEPLOYMENT.md  RENDER-SETUP-SUMMARY.md  RENDER-VISUAL-GUIDE.txt  RESUMEN.md  START-HERE.md  STATUS-COMPLETADO.md  TESTING-GUIDE.md  TESTING-WEBSOCKET.md  VALIDATION-CHECKLIST.md  WEBSOCKET-MIGRATION.md  WINDOWS-GUIDE.md  build-and-test.ps1  docker-compose.yml  render.yaml  setup-render.bat  setup-render.sh  (+4 more)
.github/workflows/: deploy.yml  test.yml
src/: main.rs  models.rs
src/handlers/: call.rs  media_stream.rs  mod.rs  test.rs  webhook.rs
src/middleware/: mod.rs
src/services/: app_state.rs  claude.rs  deepgram_ws.rs  elevenlabs.rs  mod.rs  s3.rs  session.rs  telnyx.rs
src/utils/: logger.rs
tests/: integration_tests.rs
