[package]
name = "telnyx_ai_service"
version = "1.0.0"
edition = "2021"
description = "Servicio optimizado de llamadas con IA usando Telnyx y Claude - Versión Rust"

[dependencies]
# Web Framework (Axum)
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
hyper = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# WebSocket support
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP Client
reqwest = { version = "0.12", features = ["json", "stream"] }
http = "0.2"

# Environment variables
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Collections
dashmap = "5.5"

# AWS SDK for S3 (ACTUALIZADO: De 0.52 a 1 para arreglar el error)
aws-config = "1"
aws-sdk-s3 = "1"

# Claude/Anthropic API
futures = "0.3"

# Rate limiting
governor = "0.6"

# Base64
base64 = "0.21"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "telnyx_ai_service"
path = "src/main.rs"
